Home page create

--- a/index.html
+++ b/index.html
@@ -20,142 +20,19 @@
  <body>
    <div class="leader">
    <p><a class="about" href="about.html">联系✻CONTACT</a></p>
-   <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
+   <p><a class="center_page" href="home.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
    <br>
    <div>
-   <img class="titlelogo" src="MUYA logo-19.jpg">
+     <br>
+     <a href="home.html"><img class="homepage" src="flower logo complex.gif"></a>
    </div>
    <br>
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <a href="ChinoAmobi-html/index.html">
-      <img src="chino-motion.gif" style="width:100%">
-      <h3>友情 EROICA | CHINO AMOBI 「艺术访谈」</h3>
-      <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA. In 2016 he released the EP Airport Music For Black Folk and in 2017 released his debut album Paradiso to critical acclaim. He received his MFA in Visual Communication at VCU.Amobi also earned a BFA in Painting and Printmaking from VCU. Chino has performed internationally including the New Museum New York, MOCA Los Angeles, South Korea, Russia, France, and Brazil. ▷▷▷▷</p></a>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <a href="SorinStudio-html/index.html">
-    <img src="sorin-motion.gif" style="width:100%">
-      <h3>雅痞艺术+SOARIN STUDIO | 关于西装，也许你一无所知 「艺术访谈」</h3>
-      <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <a href="xuewu-html/index.html">
-    <img src="xuewu-motion.gif" style="width:100%">
-      <h3>对话禅修艺术 | 郑学武 ZHENG XUEWU 「艺术访谈」</h3>
-      <p class="chinese">Artist/International art curator.
-      Born in HeiLongJiang（黑龙江） Agricultural Reclamation Construction Corps. He studied in the Department of Fine Arts at Harbin Normal University and the Department of Printmaking at the State University of New York, School of Fine Arts. Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland...▷▷▷▷
-     </p></a>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <a href="eric-html/index.html">
-    <img src="Eric-motion.gif" style="width:100%">
-      <h3>出生在内心的怪兽 | ERIC MILLIKIN 「艺术访谈」</h3>
-      <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
-      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy. Millikin is a first-generation college student who attended Michigan State University with multiple academic scholarships, including a National Merit Scholarship, and he is currently an MFA candidate at Virginia Commonwealth University's renowned Kinetic Imaging program.Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea... ▷▷▷▷</p></a>
-    </div>
-    </div>
-   </div>
-   <div class="row">
-     <div class="column">
-       <div class="content">
-         <a href="shiyouzhong-html/index.html">
-         <img src="shiyouzhong-cover.gif" style="width:100%">
-         <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG 「艺术访谈」</h3>
-         <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
-       </div>
-     </div>
-     <div class="column">
-       <div class="content">
-         <a href="zhengluoyu-html/index.html">
-         <img src="zhengluoyu-cover.gif" style="width:100%">
-         <h3>❀ 八月特刊 / Special Topic ❀<br>
-           八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
-         <p class="chinese"> Hello, everyone. My name is Zheng Luoyu
-          I was born in a musical family. Influenced by my father since childhood, I began to play the violin in kindergarten. At present, I am good at piano, drum set, guitar, singing and creation. It is also because of the early contact with music, I have been inspired to create since childhood, like to write songs.
-          My songwriting has no great purpose, but I simply want to use music, singing and creation to express the current emotional state. ▷▷▷▷</p></a>
-       </div>
-     </div>
-   </div>
-   <div class="row">
-     <div class="column">
-       <div class="content">
-         <a href="liulight-html/index.html">
-         <img src="liulight-motion.gif" style="width:70%">
-         <h3>与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light 「艺术访谈」</h3>
-         <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
-       </div>
-     </div>
-     <div class="column">
-       <div class="content">
-         <a href="cyriakharris-html/index.html">
-         <img src="cyriak06.gif" style="width:100%">
-         <h3>动物世界怪诞频道 | Cyriak Harris 「艺术访谈」
-         </h3>
-         <p class="chinese">Cyriak Harris is a British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason. ▷▷▷▷</p></a>
-       </div>
-     </div>
-   </div>
-   <div class="row">
-     <div class="column">
-       <div class="content">
-         <a href="digbi-html/index.html">
-         <img src="digbi-cover.gif" style="width:100%">
-         <h3>脑袋开了花，城市发了芽 | Digbijayee Khatua 「艺术访谈」</h3>
-         <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and. Most recently, He has received some Scholarships, awards, and group exhibitions in India and abroad. Research Grant Scholarship Lalit Kala Academy, Garhi Studio, New Delhi, 2015-2016. and currently based in New Delhi.▷▷▷▷</p></a>
-       </div>
-     </div>
-     <div class="column">
-       <div class="content">
-         <a href="huayiwenxin-html/index.html">
-         <img src="huayiwenxin-motion.gif" style="width:100%">
-         <h3>尚未踏入过的世界 | 画意文心-返景 「展览&访谈」</h3>
-         <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
-       </div>
-     </div>
-   </div>
-     <div class="row">
-     <div class="column">
-       <div class="content">
-         <a href="huangwei-html/index.html">
-         <img src="huangwei10.jpg" style="width:100%">
-         <h3>在水墨渲染中寻找内心的平静 | 黄威 「艺术访谈」</h3>
-         <p class="chinese">Huang Wei<br>
-         1985, Born in Baotou, Inner Mongolia
-         2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree
-         2014, I graduated from Art College of Xizang University with a master's degree
-         Now he lives and works in Beijing T3 International Art District.▷▷▷▷</p></a>
-       </div>
-     </div>
-     <div class="column">
-       <div class="content">
-         <a href="synopticoffice-html/index.html">
-         <img src="synopticoffice-cover.gif" style="width:100%">
-         <h3>跨文化下的字体设计 | Synoptic Office 「艺术访谈」</h3>
-         <p class="chinese">Caspar Lam & YuJune Park<br>
-           Synoptic Office is a multidisciplinary design studio operating in the space between design, technology, and education. The studio’s work has been exhibited internationally and recognized by Fast Company  Design, AIGA Eye on Design, iDn, Neshan, Etapes, and It’s Nice That. ▷▷▷▷</p></a>
-       </div>
-     </div>
-     <div class="column">
-       <div class="content">
-         <a href="avaroth-html/index.html">
-         <img src="avaroth-cover.jpg" style="width:100%">
-         <h3>跨界媒介的碰撞：蜂巢+刺绣 | Ava Roth 「艺术访谈」</h3>
-         <p class="chinese">Ava Roth<br>
-           Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together  techniques from the discrete worlds of fine art and crafts. Her series of sewn encaustic paintings, her collection of encaustic embroideries and her work with live bee hives all push the boundaries of what we imagine possible in each individual practice. ▷▷▷▷</p></a>
-       </div>
-     </div>
+   <p class="text">BE THE ONE</p>
+   <p class="text">没什么, 比年轻, 更为独特</p>
+   <p class="text">“Sensibility, Interview, Young, Unique & Original”</p>
 
-   </div>
 
 
 
