--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
  <body>
    <div class="leader">
    <!-- <p><a class="about" href="about.html">联系木牙✻CONTACT</a></p> -->
-   <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
+   <p><a class="center_page" href="home.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
    <br><br>
