navigate bar adjust

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
-    <title>About MUYA</title>
+    <title>Contact MUYA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_about.css">
@@ -22,7 +22,7 @@
    <div class="leader">
    <!-- <p><a class="about" href="about.html">联系木牙✻CONTACT</a></p> -->
    <p><a class="center_page" href="home.html">木牙✻MUYA</a></p>
-   <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
+   <p><a class="flawer" href="huayuji-html/index.html">花园/GARDEN</a></p>
    </div>
    <br><br>
    <div>
