--- a/huangwei-html/index.html
+++ b/huangwei-html/index.html
@@ -19,9 +19,9 @@ gtag('config', 'G-P2726CSWT4');
   </head>
   <body>
   <div class="leader">
-    <p><a class="about" href="../about.html">联系✻CONTACT</a></p>
+    <p><a class="about" href="../about.html">联系/CONTACT</a></p>
     <p><a class="center_page" href="../home.html">木牙✻MUYA</a></p>
-    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
+    <p><a class="flawer" href="../huayuji-html/index.html">花园/GARDEN</a></p>
   </div>
   <br>
   <div class="container">
