--- a/home.html
+++ b/home.html
@@ -154,6 +154,15 @@
            Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together  techniques from the discrete worlds of fine art and crafts. Her series of sewn encaustic paintings, her collection of encaustic embroideries and her work with live bee hives all push the boundaries of what we imagine possible in each individual practice. ▷▷▷▷</p></a>
        </div>
      </div>
+     <div class="column">
+       <div class="content">
+         <a href="splopdesign-html/index.html">
+         <img src="splopdesign-cover.gif" style="width:100%">
+         <h3>线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」</h3>
+         <p class="chinese">Yingqi Puffy Zhao, Kerry Yichen Guan, Junghoon Han<br>
+           Splop Design features and sells handcrafted wearable art and jewelry created by upcoming emerging artists of today.▷▷▷▷</p></a>
+       </div>
+     </div>
 
    </div>
 
