--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -99,6 +99,11 @@
 <img class="titlelogo" src="avaroth-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="splopdesign3d.gif">
+</div>
+</div>
 </div>
 
 
